@@ -18,4 +18,10 @@ Disassembly of section .text:
   23:[	 ]*f3 0f a7 e8 [	 ]*repz xcryptofb 
   27:[	 ]*0f a7 c0 [	 ]*xstorerng 
   2a:[	 ]*f3 0f a7 c0 [	 ]*repz xstorerng 
+  2e:[	 ]*f3 0f a6 c0 [	 ]*repz montmul 
+  32:[	 ]*f3 0f a6 c0 [	 ]*repz montmul 
+  36:[	 ]*f3 0f a6 c8 [	 ]*repz xsha1 
+  3a:[	 ]*f3 0f a6 c8 [	 ]*repz xsha1 
+  3e:[	 ]*f3 0f a6 d0 [	 ]*repz xsha256 
+  42:[	 ]*f3 0f a6 d0 [	 ]*repz xsha256 
 [ 	]*\.\.\.
