@@ -1,3 +1,7 @@
+2004-08-30  Michal Ludvig  <mludvig@suse.cz>
+
+	* i386.h (i386_optab): Added montmul/xsha1/xsha256 insns.
+
 2004-04-08  Alan Modra  <amodra@bigpond.net.au>
 
 	Apply from mainline.
