@@ -1,3 +1,8 @@
+2004-07-30  Michal Ludvig  <mludvig@suse.cz>
+
+	* gas/i386/padlock.s, gas/i386/padlock.d: New tests for
+	VIA PadLock instructions.
+
 2004-05-11  Daniel Jacobowitz  <dan@debian.org>
 
 	Revert patch for 2.15:
